feat(java-spring): add literary works
