# spec2code/java-spring/src/main/java/de/codecentric/javaspring/web/AuthorsController.java
@@ -1,5 +1,7 @@
 package de.codecentric.javaspring.web;
 
+import static de.codecentric.javaspring.web.Constants.API_BASE_PATH;
+
 import de.codecentric.javaspring.api.AuthorsApi;
 import de.codecentric.javaspring.api.model.AuthorDTO;
 import de.codecentric.javaspring.api.model.CreateAuthorDTO;
@@ -16,7 +18,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping("/api/v1")
+@RequestMapping(API_BASE_PATH)
 @AllArgsConstructor
 public class AuthorsController implements AuthorsApi {
     private final AuthorService service;
@@ -26,14 +28,8 @@ public class AuthorsController implements AuthorsApi {
     public ResponseEntity<AuthorDTO> createAuthor(CreateAuthorDTO createAuthor) {
         final Author entity = service.save(mapper.map(createAuthor));
         return ResponseEntity //
-                .created(URI.create("/" + entity.id())) //
+                .created(URI.create(API_BASE_PATH + "/" + entity.id())) //
                 .body(mapper.map(entity));
-    }
-
-    @Override
-    public ResponseEntity<Void> deleteAuthor(UUID authorId) {
-        service.delete(authorId);
-        return ResponseEntity.noContent().build();
     }
 
     @Override
@@ -43,21 +39,25 @@ public class AuthorsController implements AuthorsApi {
     }
 
     @Override
-    public ResponseEntity<List<AuthorDTO>> listAuthors(Integer page, Integer perPage, String search) {
-        final PaginatedResult<Author> listOfAuthors = service.list(search, page, perPage);
-        final List<AuthorDTO> authors = listOfAuthors.results().stream().map(mapper::map).toList();
-        final HttpHeaders responseHeaders = new HttpHeaders();
-        responseHeaders.add("X-Total-Count", String.valueOf(listOfAuthors.totalCount()));
-        responseHeaders.add("X-Total-Pages", String.valueOf(listOfAuthors.totalPages()));
-        responseHeaders.add("X-Per-Page", String.valueOf(perPage));
-        responseHeaders.add("X-Current-Page", String.valueOf(page));
-        return ResponseEntity.ok().headers(responseHeaders).body(authors);
+    public ResponseEntity<Void> updateAuthor(UUID authorId, CreateAuthorDTO createAuthor) {
+        service.get(authorId); // check if author exists
+        service.save(mapper.map(createAuthor, authorId));
+        return ResponseEntity.noContent().build();
     }
 
     @Override
-    public ResponseEntity<Void> updateAuthor(UUID authorId, CreateAuthorDTO createAuthor) {
-        service.get(authorId); // check if author exists
-        service.save(mapper.map(createAuthor));
+    public ResponseEntity<Void> deleteAuthor(UUID authorId) {
+        service.delete(authorId);
         return ResponseEntity.noContent().build();
+    }
+
+    @Override
+    public ResponseEntity<List<AuthorDTO>> listAuthors(Integer page, Integer perPage, String search) {
+        final PaginatedResult<Author> listOfAuthors = service.list(search, page, perPage);
+        final List<AuthorDTO> authors = listOfAuthors.results().stream().map(mapper::map).toList();
+        final HttpHeaders responseHeaders = listOfAuthors.getHeaders();
+        responseHeaders.add("X-Per-Page", String.valueOf(perPage));
+        responseHeaders.add("X-Current-Page", String.valueOf(page));
+        return ResponseEntity.ok().headers(responseHeaders).body(authors);
     }
 }
